[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["flows"]

[project]
name = "flows"
version = "0.0.1"
description = "ToDo"  # ToDo: https://github.com/epfl-dlab/flows/issues/70
readme = "ToDo" # ToDo:
authors = [
  { name = "ToDo", email = "my_email@domain.com" },  # ToDo:
]
license = {file = "LICENSE"}

dependencies = [
    "colorama==0.4.6",
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "hydra-core==1.2.0",
    "hydra-colorlog==1.1.0",
    "pyext==0.7",
    "wrapt-timeout-decorator==1.3.12.2",
    "diskcache==5.6.1",
    "openai==1.0.0",
    "huggingface_hub==0.15.1",
    "jsonlines==3.1.0",
    "jinja2==3.1.2",
    "mock==5.0.2",
    "rich==12.6.0",
    "litellm==1.0.0.dev1"
]

[project.urls]
Home = "ToDo"  # ToDo:
Documentation = "ToDo"  # ToDo:
Source = "https://github.com/epfl-dlab/flows"