[build-system]
requires = ["setuptools>=42", "setuptools-scm"]

[tool.setuptools]
py-modules = ["aiflows"]

[tool.setuptools.dynamic]
version = {attr = "aiflows.VERSION"}

[project]
license = {file = "LICENSE"}
name = "aiflows"
description = 'aiFlows implements the abstraction of Flows proposed in "Flows: Building Blocks of Reasoning and Collaborating AI" and greatly simplifies the design and implementation of complex (work)Flows involving humans, AI systems, and tools.'
authors = [
    { name = "Martin Josifoski", email = "martin.josifoski@epfl.ch" },
    { name = "Nicolas Baldwin", email = "nicolas.baldwin@epfl.ch"}
]
requires-python = ">=3.10"
readme = "README_PyPI.md"
dynamic = ["version"]

dependencies = [
    "colorama==0.4.6",
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.1.0",
    "wrapt-timeout-decorator==1.3.12.2",
    "diskcache==5.6.1",
    "openai==1.0.0",
    "huggingface_hub==0.19.4",
    "jsonlines==3.1.0",
    "jinja2==3.1.2",
    "mock==5.0.2",
    "rich==12.6.0",
    "litellm==1.0.0",
    "colink==0.3.7",
    "termcolor==2.4.0",
    "streamlit==1.32.2",
]

[project.urls]
Home = "https://epfl-dlab.github.io/aiflows/"
Documentation = "https://epfl-dlab.github.io/aiflows/docs/built_with_sphinx/html/index.html"
Source = "https://github.com/epfl-dlab/aiflows"
Issues = "https://github.com/epfl-dlab/aiflows/issues"
